--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+#Disable compiled python
+*.pyo
+
 # =========================
 # Operating System Files
 # =========================
@@ -26,7 +29,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
